added html writting on javascript

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	Guess the letter that I'm thinking of.
 	<br />
 	<br />
-	<div id='wins'>Wins:</div>
+	<div id='wins'>Wins: 0</div>
 	<br />
-	<div id="losses">Losses:</div>
+	<div id="losses">Losses: 0</div>
 	<br />
-	<div id="left">Tries left:</div>
+	<div id="tries">Tries left: 0</div>
 	<br />
-	<div id="guesses">Guess list:</div>
+	<div id="guesses">Guesses so far:</div>
 </body>
 </html>
