added background image and styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 	<div class="message">Guess the letter that I'm thinking of.</div>
 	<div class="container">
 		<section class="leftSection">
+			<div class="rotate"></div>
 			<div class="tally" id='wins'>Wins: 0</div>
 			<div class="tally" id="losses">Losses: 0</div>
 			<div class="tally" id="tries">Tries left: 0</div>
 		</section>
 		<section class="rightSection">
-			Guesses so far:
-			<div id="guesses"></div>
+			<div class="rotate"></div>
+			<div class="guesses">
+				Guesses so far:
+				<div id="guesses"></div>
+			</div>
 		</section>
 	</div>
 	<footer class="footer">
